<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.PaymentMethodFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="10dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/text_method_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/method_paypro"
                android:textStyle="bold"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/text_method_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/text_method_title"
                android:text="@string/method_paypro_description"
                android:textSize="11sp"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shapeableImageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/text_method_description"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/paypro_proto"
                app:shapeAppearanceOverlay="@style/ShapeAppearance" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:cardElevation="5dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/text_method_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:text="@string/method_link_pro"
                android:textStyle="bold"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/text_method_description2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/text_method_title2"
                android:text="@string/method_link_pro_description"
                android:textSize="11sp"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shapeableImageView2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/text_method_description2"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/linkpro_proto"
                app:shapeAppearanceOverlay="@style/ShapeAppearance" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>